--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vanilla",
+  "name": "personal site",
   "version": "1.0.0",
-  "description": "Person web page",
+  "description": "Personal web page",
   "main": "index.html"
 }
